all about jsx and react components

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is namaste react by Divyanshu Pathak",
   "main": "App.js",
   "scripts": {
+    "start": "parcel index.html",
     "test": "jest"
   },
   "repository": {
